# order-analytics-realtime-platform

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  main.py  producer.py  pyproject.toml
